# lazycph

./: AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: release.yml
assets/: lazycph.tape
internal/app/: model.go
internal/core/: config.go  engine.go  engine_test.go  messages.go  store.go  testcase.go  testcase_test.go
internal/screens/companion/: keymap.go  messages.go  model.go  server.go
internal/screens/filepicker/: keymap.go  layout.go  model.go  style.go
internal/screens/workspace/: focus.go  keymap.go  layout.go  messages.go  model.go
internal/ui/list/: keymap.go  messages.go  model.go  style.go
internal/ui/output/: keymap.go  model.go  style.go
internal/ui/textarea/: keymap.go  messages.go  model.go  style.go
internal/workspace/: focus.go  keymap.go  layout.go  model.go
src/lazycph/: __main__.py  app.py  engines.py  runtimes.py
src/lazycph/runtimes/: __init__.py  c.py  cpp.py  main.py  python.py  utils.py
src/lazycph/screens/: __init__.py  companion.py  file_picker.py
src/lazycph/utils/runtimes/: c.py  cpp.py  main.py  python.py  utils.py
src/lazycph/widgets/: __init__.py  editor.py  testcase_item.py  testcase_list.py  workspace.py
test/data/cpp/: compile-error.cpp  runtime-error.cpp
test/data/python/: horizontal.py  runtime-error.py
tests/: test_engines.py  test_runtimes.py
